create user profile - get and put

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -184,7 +184,7 @@
         <img src="">
       <b class="caret"></b></a>
     <mat-menu #beforeMenu="matMenu" xPosition="before">
-      <a  routerLink="/profile" class="dropdown-item" ><i class="bi bi-person pr-3 pt-2"></i>Profile</a>
+      <a  routerLink="/user" class="dropdown-item" ><i class="bi bi-person pr-3 pt-2"></i>Profile</a>
       <a href="#" class="dropdown-item"><i class="bi bi-receipt-cutoff pr-3 pt-2"></i> Billing</a>
       <a href="#" class="dropdown-item"><i class="bi bi-sliders2 pr-3 pt-2"></i>Settings</a>
       <div class="divider dropdown-divider"></div>
