--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -34,8 +34,11 @@
         <p class="card-text text-muted">Starts at {{event?.startsPrice | currency:'EUR':true}}</p>    
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button [routerLink]="['/events', event?._id]">SEE EVENT</button>
-      <button mat-button >SAVE TO FAVOURITE</button>
+      <!-- <button mat-button [routerLink]="['/events', event?._id]" >SEE EVENT</button> -->
+      <button mat-button (click)="seeEvent()">SEE EVENT</button>
+      <button mat-button (click)="seeEvent2()">SEE EVENT2</button>
+
+      <button mat-button (click)="saveToFavourite()">SAVE TO FAVOURITE</button>
     </mat-card-actions>
   </mat-card>
 
