--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -20,6 +20,15 @@
   .example-card-icon.purple-star {
     color: purple;
   }
+
+  .material-icons.starred {
+    color: purple;
+  }
+  
+  .material-icons.unstarred {
+    color: gray;
+  }
+  
   
   
   
