--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -88,7 +88,7 @@
  </div>
 
 <div class="container pt-4" [class.border]="isShow">
-    <app-event-list [eventList]="events "></app-event-list>
+    <app-event-list [eventList]="events" [isFav]="isFav"></app-event-list>
 </div>
 
 
