--- a/src/app/components/event-list/event-list.component.html
+++ b/src/app/components/event-list/event-list.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="row text-center">
     <div class="col-md-6 col-lg-3 p-2 col-sm-12" *ngFor="let event of eventList">
-        <app-event [event]="event"></app-event>
+        <app-event [event]="event" [isFav]="isFav"></app-event>
     </div>
   </div>
 </div>
