--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -309,3 +309,19 @@
 .navbar-toggler{
 	background-color: #4dd4d5;
 }
+
+.search-box[_ngcontent-vpa-c227] input[_ngcontent-vpa-c227] {
+    padding-right: 35px;
+    min-height: 38px;
+    border: none;
+    background: #faf7fd !important;
+    border-radius: 3px !important;
+}
+
+.form-control{
+	padding-right: 35px;
+    min-height: 38px;
+    border: none;
+    background: #faf7fd !important;
+    border-radius: 3px !important;
+}
