--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -33,6 +33,10 @@
     width: 10%;
   }
   
+  .white-button {
+    background-color: white !important;
+    // color: white !important;
+  }
   
 .time-stamp{
   font-size: 14px;
@@ -54,6 +58,10 @@
   display: -webkit-box;
   -webkit-line-clamp: 2;
 }
+.bi-heart-fill{
+  font-size: 1.4rem;
+
+}
 .card-sub-information{
   font-size: 14px;
   line-height: 1.33;
@@ -63,4 +71,36 @@
   -webkit-box-orient: vertical;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+}
+
+.bi-heart{
+  font-size: 1.4rem;
+}
+
+
+.white-button {
+  background-color: white;
+  // color: white;
+  position: relative;
+  top: -40px;
+  right: -8px;
+}
+
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
+.selected-card:hover {
+  box-shadow: 0 8px 8px 8px rgba(0,0,0,.2), 0 8px 8px 0 rgba(0,0,0,.14), 0 8px 8px 0 rgba(0,0,0,.12) !important;
+  transform: translate3d(0,0,0);
+  transition: background .4s cubic-bezier(.25,.8,.25,1),box-shadow 280ms cubic-bezier(.4,0,.2,1);
+}
+
+.link{
+  cursor: pointer;
 }
