--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -66,7 +66,7 @@
                                 <mat-label>County</mat-label>
                                 <select matNativeControl formControlName="county" #county>
                                   <option value="">Select County</option>
-                                  <!-- <option *ngFor="let county of counties" [value]="county">{{ county }}</option> -->
+                                  <option *ngFor="let county of counties" [value]="county">{{ county }}</option>
                                 </select>
                               </mat-form-field>
                             </div>
