--- a/src/app/components/event-details/event-details.component.html
+++ b/src/app/components/event-details/event-details.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
       <app-hero [title]="event?.name"></app-hero>  
-    <div class="container p-2 mt-4">
-      <div class="row bg-light pt-2">
+    <div class="container p-2 mt-5">
+      <div class="row bg-light pt-5">
         <div class="col-4">
           <img class="card-img-top p-2"
             src="https://s3-images-web-ca2.s3.eu-west-1.amazonaws.com/{{event?.urlImg}}"
@@ -9,7 +9,19 @@
           <p class="mt-3 pl-3 pl-md-2">
             <span>Refund Policy : {{event?.refundpolicy | titlecase}} </span>
           </p>
+
+            <div *ngIf="userGroup=='manager'" class="row pt-4">
+              <div class="col-6">
+                <button class="btn btn-info w-100" (click)="onEditEvent()">Edit Event</button>
+              </div>
+              <div class="col-6">
+                <button class="btn btn-outline-danger w-100" (click)="onDelete()">Delete Event</button>
+              </div>
+
+          </div>
+          
         </div>
+        
         <div class="col-8">
           <h1>{{ event?.name }}</h1>
           <p>{{event?.description}}</p>
@@ -33,14 +45,7 @@
 
           </div>
         </div> 
-        <div *ngIf="userGroup=='manager'" class="row">
-          <div class="col-3">
-            <button class="btn btn-info w-100" (click)="onEditEvent()">Edit Event</button>
-          </div>
-          <div class="col-3">
-            <button class="btn btn-outline-danger w-100" (click)="onDelete()">Delete Event</button>
-          </div>
-        </div>
+
         </div>
       </div>
       </div>
