--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -20,30 +20,47 @@
     </div>
   </div> -->
 
-  <mat-card class="example-card custom-card">
+  <mat-card  class="example-card custom-card mt-3 selected-card">
     <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>ShowTime</mat-card-title>
-      <mat-card-subtitle>Jessica Henry</mat-card-subtitle>
+      <!-- <div mat-card-avatar class="example-header-image"></div> -->
+      <!-- <mat-card-title>ShowTime</mat-card-title> -->
+      <!-- <mat-card-subtitle>Jessica Henry</mat-card-subtitle> -->
       <!-- <span [ngClass]="{'material-icons-outlined': !isStarred, 'material-icons': isStarred, 'purple-star': isStarred}" class="example-card-icon" (click)="toggleStar()">star_rate</span> -->
       <!-- <span [ngClass]="{'material-icons-outlined': !isStarred, 'material-icons': isStarred, 'purple-star': isStarred}" class="example-card-icon" (click)="toggleStar()">star_rate</span> -->
-      <span  *ngIf="authenticator?.user" [ngClass]="{'material-icons-outlined': !isStarred, 'material-icons': isStarred, 'purple-star': isStarred}" class="example-card-icon" (click)="toggleStar()">star_rate</span>
 
     </mat-card-header>
     <img mat-card-image src="https://s3-images-web-ca2.s3.eu-west-1.amazonaws.com/{{event?.urlImg}}" alt="Photo of a Shiba Inu">
     <mat-card-content>
-      <p class="card-text time-stamp"> {{event?.eventDateStarts | date }} at {{event?.eventDateStarts |date:'shortTime'}}</p>
+      <div class="row d-flex">
+        <div class="col-8">
+          <p class="card-text time-stamp"> {{event?.eventDateStarts | date }} at {{event?.eventDateStarts |date:'shortTime'}}</p>
+        </div>
+        <div class="col-4 d-flex justify-content-end">
+          <!-- <span  *ngIf="authenticator?.user" [ngClass]="{'material-icons-outlined': !isStarred, 'material-icons': isStarred, 'purple-star': isStarred}" class="example-card-icon" (click)="toggleStar()">star_rate</span> -->
+          <button mat-fab matTooltip="Primary" color="white" aria-label="Example fab with a heart icon" class="white-button">
+            <!-- <mat-icon [ngClass]="{'material-icons-outlined': !isStarred, 'material-icons': isStarred, 'purple-star': isStarred}" color="white">favorite</mat-icon> -->
+            <!-- <span color="primary" *ngIf="authenticator?.user" [ngClass]="{'material-icons-outlined': !isStarred, 'material-icons': isStarred, 'purple-star': isStarred}" class="example-card-icon" (click)="toggleStar()">favorite</span> -->
+            <!-- <span *ngIf="authenticator?.user" [ngClass]="{'bi-heart': isStarred, 'bi-heart-fill': !isStarred, 'purple-star': isStarred}" class="example-card-icon" (click)="toggleStar()"></span> -->
+            <span  *ngIf="authenticator?.user" [ngClass]="{'bi-heart': !isStarred, 'bi-heart-fill': isStarred, 'purple-star': isStarred}" class="example-card-icon" (click)="toggleStar()"></span>
+
+          </button>
+        </div>
+      </div>
+     
+      <div (click)="seeEvent()" class="link" >
+
       <p class="card-title">{{ event?.name }}</p>
         <p class="card-text text-muted card-sub-information"> {{event?.address?.line1}},{{event?.address?.city}}</p>    
         <p class="card-text text-muted">Starts at {{event?.startsPrice | currency:'EUR':true}}</p>    
+      </div>
+
     </mat-card-content>
     <!-- <div style="text-align: center;"> -->
-      <mat-card-actions class="row d-flex justify-content-center">
-          <button mat-raised-button color="primary" class="w-75" (click)="seeEvent()">See Event</button>
+      <!-- <mat-card-actions class="row d-flex justify-content-center"> -->
+          <!-- <button mat-raised-button color="primary" class="w-75" (click)="seeEvent()">See Event</button> -->
           <!-- <button mat-raised-button>Basic</button> -->
-
         <!-- <button mat-button (click)="AddEventFavourite()">SEE EVENT2</button> -->
-      </mat-card-actions>
+      <!-- </mat-card-actions> -->
       
   <!-- </div> -->
 
