--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -42,7 +42,7 @@
               </mat-tab>
               <mat-tab *ngIf="authenticator?.user">
                 <ng-template mat-tab-label >
-                  <mat-icon class="example-tab-icon mr-1">star</mat-icon>
+                  <mat-icon class="example-tab-icon mr-1">favorite</mat-icon>
                   <span class="btn-tab">Favourites</span>
                 </ng-template>
                 <div>
