--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -325,3 +325,8 @@
     background: #faf7fd !important;
     border-radius: 3px !important;
 }
+
+// .profileImg{
+// 	width: 2.8rem !important;
+// 	height: 2.5rem !important;
+// }
