--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -8,7 +8,7 @@
             <div class="account-settings">
                 <div class="user-profile">
                     <div class="user-avatar">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Maxwell Admin">
+                        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Maxwell Admin">
                     </div>
                     <h5 class="user-name">{{authenticator?.user?.username}}</h5>
                     <h6 class="user-email">{{authenticator?.user?.attributes?.email}}</h6>
@@ -17,9 +17,6 @@
             </div>
         </div>
     </div>
-
-
-
     </div>
     <div class="col-9">
         <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
