--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -181,6 +181,7 @@
     </mat-menu>
     <a mat-button [matMenuTriggerFor]="beforeMenu" data-toggle="dropdown"
       class="nav-item nav-link dropdown-toggle user-action pt-4">
+      {{user?.name}} {{user?.familyName}}
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="rounded-circle profile profileImg">
       <b class="caret"></b></a>
     <mat-menu #beforeMenu="matMenu" xPosition="before">
