--- a/src/app/components/event-form/event-form.component.html
+++ b/src/app/components/event-form/event-form.component.html
@@ -93,7 +93,7 @@
           </div>
           <div class="col-8">
             <h3>Positive keywords</h3>
-            <p>Enter search terms you feel the pet owners will use when looking for your event.</p>
+            <p>Enter search terms you feel the users will use when looking for your event.</p>
             <mat-form-field class="example-chip-list" appearance="outline">
               <mat-label>Positive keywords</mat-label>
               <mat-chip-list #chipList aria-label="positivekeywords selection">
@@ -237,7 +237,7 @@
           <div class="container pt-2">
 <div class="row">
   <h5>Showcase Your Events In a Event Gallery</h5> 
-  <p>Encourage Pet Owners to choose your event by featuring a variety of your work.</p>
+  <p>Encourage users to choose your event by featuring a variety of your work.</p>
 </div>
    <div class="row pt-3">
     <h6>Images (up to 3)</h6>
