--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar *ngIf="this.isLoading" mode="indeterminate" color="primary" height="10px"></mat-progress-bar>
 
 <div class="container mt-4 pt-4">
     <div class="row gutters">
