--- a/src/app/components/event-details/event-details.component.html
+++ b/src/app/components/event-details/event-details.component.html
@@ -1,3 +1,5 @@
+<mat-progress-bar *ngIf="this.isLoading" mode="indeterminate" color="primary" height="10px"></mat-progress-bar>
+
 <div class="wrapper">
       <app-hero [title]="event?.name"></app-hero>  
     <div class="container p-2 mt-5">
