--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -7,9 +7,9 @@
         <div class="col-8">
           <p class="card-text time-stamp"> {{event?.eventDateStarts | date }} at {{event?.eventDateStarts |date:'shortTime'}}</p>
         </div>
-        <div class="col-4 d-flex justify-content-end">
+        <div *ngIf="authenticator?.user" class="col-4 d-flex justify-content-end">
           <button mat-fab matTooltip="Primary" color="white" aria-label="Example fab with a heart icon" class="white-button">
-            <span  *ngIf="authenticator?.user" [ngClass]="{'bi-heart': !isStarred, 'bi-heart-fill': isStarred, 'purple-star': isStarred}" class="example-card-icon" (click)="toggleStar()"></span>
+            <span   [ngClass]="{'bi-heart': !isStarred, 'bi-heart-fill': isStarred, 'purple-star': isStarred}" class="example-card-icon" (click)="toggleStar()"></span>
 
           </button>
         </div>
