--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -1,6 +1,6 @@
   <mat-card  class="example-card custom-card mt-3 selected-card">
-    <mat-card-header>
-    </mat-card-header>
+    <!-- <mat-card-header>
+    </mat-card-header> -->
     <img mat-card-image src="https://s3-images-web-ca2.s3.eu-west-1.amazonaws.com/{{event?.urlImg}}" alt="Photo of a Shiba Inu">
     <mat-card-content>
       <div class="row d-flex">
