remove progress bar

--- a/src/app/components/user-ticket/user-ticket.component.html
+++ b/src/app/components/user-ticket/user-ticket.component.html
@@ -1,4 +1,4 @@
-<mat-progress-bar mode="indeterminate"></mat-progress-bar>
+<!-- <mat-progress-bar mode="indeterminate"></mat-progress-bar> -->
 <form [formGroup]="ticketUserOwner" (ngSubmit)="onSubmit()">
   <div class="container pt-4 row">
     <h3>Ticket date: 15.07 | {{ticket?.title}}     #{{index}}</h3>
