--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar *ngIf="this.isLoading" mode="indeterminate" color="primary" height="10px"></mat-progress-bar>
 
 
           <div  class="container pt-4">
